--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,14 @@
 .carousel-item {
     height: 0;
     padding-bottom: 56.25%; /* Proporción 16:9 */
-    position: relative;
+    
     overflow: hidden;
 }
+body{
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+
+
