terminando el registro de usuario

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
 
 
     <!-- Modal para iniciar sesión  -->
-    <div class="modal " id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal fade " id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -121,7 +121,7 @@
                                 </div>
 
                                 <!-- Paso 3:  Datos personales -->
-                                <div class="carousel-item" style="  overflow-x: hidden;">
+                                <div class="carousel-item" style=" overflow-x: hidden; overflow-y:auto">
                                     <form id="registerForm">
                                         <div class="row">
                                             <div class="mb-3 col-md-6 ">
