--- a/views/Admin.html
+++ b/views/Admin.html
@@ -1,11 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>Feligrés</title>
+    <link rel="icon" href="/img/veterinario.png" type="image/png">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+
+
+    <link rel="stylesheet" href="css/styleAdmin.css">
+
+
+
 </head>
+
 <body>
-    
+
+    <div class="container-fluid p-0">
+        <div class="row">
+            <!-- Sidebar -->
+            <div class="col-md-3 col-lg-2 col-sm-12 p-0 bg-light sidebar" style="background-color: blueviolet;">
+                <div id="sidebar-header" class="d-flex flex-column flex-shrink-0 p-3  sidebar-content">
+                    <div class="container d-none d-sm-block">
+                        <a href=""
+                            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none custom-img-container">
+                            <div class="w-100 w-sm-75 w-md-50 w-lg-25">
+                                <img src="/img/veterinario.png" class="img-fluid " alt="">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <span class="fs-4">Doctor Doolittle</span>
+                    </div>
+                    <hr>
+                    <ul class="nav nav-pills flex-column mb-auto">
+
+                        <li class="nav-item mt-1">
+                            <a id="inicioLink" class="nav-dark btn btn-light d-flex align-items-center"
+                                aria-current="page">
+                                <i class="bi bi-house me-2"></i> Inicio
+                            </a>
+                        </li>
+
+                        <li class="nav-item mt-1">
+                            <a href="#" id="SolicitudDePartidas"
+                                class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
+                                <i class="bi bi-send-arrow-down me-2"></i> Solicitud de partida
+                            </a>
+                        </li>
+                        <li class="nav-item mt-1">
+                            <a id="SolicitudDeMisas" href="#" class="nav-dark btn btn-light d-flex align-items-center">
+                                <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                            </a>
+                        </li>
+
+                    </ul>
+                    <hr>
+
+                    <div class="dropdown my3 ">
+                        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
+                            id="dropdownUser9" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="/img/veterinario.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                            <strong>mdo</strong>
+                        </a>
+                        <ul class="dropdown-menu  text-small shadow" aria-labelledby="dropdownUser9">
+                            <li><a id="configuracionBtn" class="dropdown-item" href="#">Configuración</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="/">Cerrar Sesión</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal para editar perfil -->
+            <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editProfileModalLabel">Editar Perfil</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="editProfileForm">
+                                <div class="mb-3">
+                                    <label for="editName" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" id="editName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="editEmail" class="form-label">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="editEmail" required>
+                                </div>
+                                <!-- Agrega más campos según sea necesario -->
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mobile Header -->
+            <nav class="navbar navbar-light bg-light d-md-none">
+                <div class="container-fluid">
+                    <a href="/" class="link-dark text-decoration-none">
+                        <img src="/img/veterinario.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                        <span>Doctor Doolittle</span>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+
+                            <li class="nav-item">
+                                <a id="MobileinicioLink" class="nav-dark btn btn-light d-flex align-items-center"
+                                    aria-current="page">
+                                    <i class="bi bi-house me-2"></i> Inicio
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="#" id="MobileAdminLink"
+                                    class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
+                                    <i class="bi bi-send-arrow-down me-2"></i> Mascotas
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" id="MobileMisa" class="nav-dark btn btn-light d-flex align-items-center"
+                                    aria-current="page">
+                                    <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                                </a>
+                            </li>
+
+
+                            <li class="nav-item">
+                                <a href="#" id="MobilePerfil" class="nav-dark btn btn-light d-flex align-items-center"
+                                    aria-current="page">
+                                    <i class="bi bi-person-fill-gear me-2"></i> Perfil
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a href="/" id="MobileGestionPartidas"
+                                    class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
+                                    <i class="bi bi-arrow-right-square me-2"></i> Cerrar sesión
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+
+
+
+
+            <!-- Contenido principal -->
+            <main id="Principal"
+                class="col-md-9 col-lg-10 col-sm-12 d-flex justify-content-center aling-items-center custom-main">
+
+                <div class="container px-5 my-5 text-center">
+                    <img src="/img/veterinario.png" class="img-fluid" alt="">
+                </div>
+
+
+            </main>
+        </div>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="editProfile.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 </body>
+
 </html>
