--- a/views/User.html
+++ b/views/User.html
@@ -166,12 +166,103 @@
 
 
             <!-- Contenido principal -->
-            <main id="Principal"
-                class="col-md-9 col-lg-10 col-sm-12 d-flex justify-content-center aling-items-center custom-main">
+            <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center custom-main">
 
-                <div class="container px-5 my-5 text-center" style="background-color: aqua;">
-                    <img src="/img/veterinario.png" class="img-fluid" alt="">
+                <div class="container w-76 mt-5">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#createPetModal">
+                        Crear Mascota
+                    </button>
                 </div>
+
+                <div class="modal fade" id="createPetModal" tabindex="-1" aria-labelledby="createPetModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="createPetModalLabel">Crear Nueva Mascota</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span class="visually-hidden">Cerrar</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="createPetForm">
+                                    <div class="mb-3">
+                                        <label for="petName" class="form-label">Nombre*</label>
+                                        <input type="text" class="form-control" id="petName" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petPhoto" class="form-label">Foto URL</label>
+                                        <input type="url" class="form-control" id="petPhoto">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petSpecies" class="form-label">Especie*</label>
+                                        <input type="text" class="form-control" id="petSpecies" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petBreed" class="form-label">Raza</label>
+                                        <input type="text" class="form-control" id="petBreed">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petBirthdate" class="form-label">Fecha de nacimiento</label>
+                                        <input type="date" class="form-control" id="petBirthdate">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petGender" class="form-label">Género</label>
+                                        <select class="form-select" id="petGender">
+                                            <option value="">Seleccionar</option>
+                                            <option value="Macho">Macho</option>
+                                            <option value="Hembra">Hembra</option>
+                                        </select>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petWeight" class="form-label">Peso (kg)</label>
+                                        <input type="number" class="form-control" id="petWeight" step="0.1">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petColor" class="form-label">Color</label>
+                                        <input type="text" class="form-control" id="petColor">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petAllergies" class="form-label">Alergias</label>
+                                        <textarea class="form-control" id="petAllergies"></textarea>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="petDietaryRestrictions" class="form-label">Restricciones
+                                            dietéticas</label>
+                                        <textarea class="form-control" id="petDietaryRestrictions"></textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                <button type="button" class="btn btn-primary" onclick="createPet()">Guardar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container  px-5 my-2 " style="background-color: aqua; width:85% ">
+                    <div class="row row-cols-1 row-cols-md-3 g-4" id="petCardsContainer">
+                        <!-- Las tarjetas de mascotas se insertarán aquí dinámicamente -->
+                    </div>
+                </div>
+
+                <!-- Template para la tarjeta de mascota -->
+                <template id="petCardTemplate">
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="" class="card-img-top pet-photo" alt="Foto de la mascota">
+                            <div class="card-body">
+                                <h5 class="card-title pet-name"></h5>
+                                <p class="card-text pet-species"></p>
+                                <p class="card-text pet-breed"></p>
+                            </div>
+                            <div class="card-footer">
+                                <button class="btn btn-primary btn-sm me-2 edit-pet">Editar</button>
+                                <button class="btn btn-danger btn-sm delete-pet">Eliminar</button>
+                            </div>
+                        </div>
+                    </div>
+                </template>
 
 
             </main>
@@ -181,7 +272,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="RegisterUser.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -192,6 +283,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="editProfile.js"></script>
+    <script src="pet.js"></script>
+    <script src="cardPets.js"></script>
 
 
 </body>
