cards de mascotas

--- a/views/User.html
+++ b/views/User.html
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="css/styleAdmin.css">
+    <link rel="stylesheet" href="css/styleUser.css">
 
 
 
@@ -166,7 +166,7 @@
 
 
             <!-- Contenido principal -->
-            <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center custom-main">
+            <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center " style="height: 100vh; overflow-y: auto;">
 
                 <div class="container w-76 mt-5">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
