--- a/views/User.html
+++ b/views/User.html
@@ -161,12 +161,42 @@
                 </div>
             </nav>
 
+            <!-- Modal para editar perfil -->
+            <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editProfileModalLabel">Editar Perfil</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="editProfileForm">
+                                <div class="mb-3">
+                                    <label for="editName" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" id="editName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="editEmail" class="form-label">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="editEmail" required>
+                                </div>
+                                <!-- Agrega más campos según sea necesario -->
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
 
 
 
             <!-- Contenido principal -->
-            <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center " style="height: 100vh; overflow-y: auto;">
+            <main id="Principal" class="col-md-9 col-lg-10 col-sm-12 d-flex flex-column align-items-center "
+                style="height: 100vh; overflow-y: auto;">
 
                 <div class="container w-76 mt-5">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -175,7 +205,8 @@
                     </button>
                 </div>
 
-                <div class="modal fade" id="createPetModal" tabindex="-1" aria-labelledby="createPetModalLabel" aria-hidden="true">
+                <div class="modal fade" id="createPetModal" tabindex="-1" aria-labelledby="createPetModalLabel"
+                    aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
