--- a/views/Admin.html
+++ b/views/Admin.html
@@ -144,7 +144,7 @@
 
 
                             <li class="nav-item">
-                                <a href="#" id="MobilePerfil" class="nav-dark btn btn-light d-flex align-items-center"
+                                <a href="" id="MobileconfiguracionBtn" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
                                     <i class="bi bi-person-fill-gear me-2"></i> Perfil
                                 </a>
