--- a/views/User.html
+++ b/views/User.html
@@ -144,7 +144,7 @@
 
 
                             <li class="nav-item">
-                                <a href="#" id="MobilePerfil" class="nav-dark btn btn-light d-flex align-items-center"
+                                <a href="" id="MobileconfiguracionBtn" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
                                     <i class="bi bi-person-fill-gear me-2"></i> Perfil
                                 </a>
@@ -288,8 +288,8 @@
                                 <p class="card-text pet-breed"></p>
                             </div>
                             <div class="card-footer">
-                                <button class="btn btn-primary btn-sm me-2 edit-pet">Editar</button>
-                                <button class="btn btn-danger btn-sm delete-pet">Eliminar</button>
+                                <button class="btn btn-primary btn-sm me-2 edit-pet">Vacunas</button>
+                                <button class="btn btn-danger btn-sm delete-pet">Historial</button>
                             </div>
                         </div>
                     </div>
