--- a/views/Admin.html
+++ b/views/Admin.html
@@ -48,9 +48,9 @@
                         </li>
 
                         <li class="nav-item mt-1">
-                            <a href="#" id="SolicitudDePartidas"
+                            <a href="#" id="Calendario"
                                 class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
-                                <i class="bi bi-send-arrow-down me-2"></i> Solicitud de partida
+                                <i class="bi bi-calendar-check me-2"></i> Calendario
                             </a>
                         </li>
                         <li class="nav-item mt-1">
@@ -170,7 +170,7 @@
                 class="col-md-9 col-lg-10 col-sm-12 d-flex justify-content-center aling-items-center custom-main">
 
                 <div class="container px-5 my-5 text-center">
-                    <img src="/img/veterinario.png" class="img-fluid" alt="">
+                    <img src="/img/fondo.jpg" class="img-fluid" alt="">
                 </div>
 
 
@@ -179,9 +179,16 @@
     </div>
 
 
+    
+              
+
+    
+
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="editProfile.js"></script>
+    <script src="calenderAdmin.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -196,3 +203,4 @@
 </body>
 
 </html>
+
