--- a/views/Admin.html
+++ b/views/Admin.html
@@ -54,8 +54,8 @@
                             </a>
                         </li>
                         <li class="nav-item mt-1">
-                            <a id="SolicitudDeMisas" href="#" class="nav-dark btn btn-light d-flex align-items-center">
-                                <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                            <a id="SearchForDocUser" href="#" class="nav-dark btn btn-light d-flex align-items-center">
+                                <i class="bi bi-search me-2"></i> Buscar
                             </a>
                         </li>
 
@@ -130,15 +130,15 @@
                             </li>
 
                             <li class="nav-item">
-                                <a href="#" id="MobileAdminLink"
+                                <a href="#" id="MobileCalendario"
                                     class="nav-dark btn btn-light d-flex align-items-center" aria-current="page">
-                                    <i class="bi bi-send-arrow-down me-2"></i> Mascotas
+                                    <i class="bi bi-calendar-check me-2"></i> Calendario
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" id="MobileMisa" class="nav-dark btn btn-light d-flex align-items-center"
                                     aria-current="page">
-                                    <i class="bi bi-calendar-month me-2"></i> Solicitud de misa
+                                    <i class="bi bi-search me-2"></i> Buscar
                                 </a>
                             </li>
 
@@ -169,7 +169,7 @@
             <main id="Principal"
                 class="col-md-9 col-lg-10 col-sm-12 d-flex justify-content-center aling-items-center custom-main">
 
-                <div class="container px-5 my-5 text-center">
+                <div class="container px-5 my-5 text-center" style="background-color: aquamarine;">
                     <img src="/img/fondo.jpg" class="img-fluid" alt="">
                 </div>
 
@@ -179,16 +179,10 @@
     </div>
 
 
-    
-              
-
-    
-
-
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="editProfile.js"></script>
     <script src="calenderAdmin.js"></script>
+    <script src="SearchPetIdUser.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
